--- a/AbkarFE/src/components/login-signup/style/_reassign.scss
+++ b/AbkarFE/src/components/login-signup/style/_reassign.scss
@@ -52,40 +52,52 @@
   }
 
   form {
-    input {
-      width: 80%;
-      text-align: right;
-      font-family: "Omnes Arabic";
-      font-size: 24px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 22px;
-      letter-spacing: -0.408px;
-      background: var(--Background, #fffaed);
-      margin: 10px 0;
-      border-bottom: 1px solid black;
-      border-top: none;
-      border-left: none;
-      border-right: none;
+    div {
+      position: relative;
 
-      &:placeholder-shown {
-        color: var(--Gray-mid, #888);
+      label {
+        position: absolute;
+        right: 70px;
+        bottom: 14px;
+        color: gray;
+        font-size: 18px;
+        transition: 0.5s;
+      }
+      input {
+        width: 80%;
+        text-align: right;
+        font-family: "Omnes Arabic";
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 22px;
+        letter-spacing: -0.408px;
+        background: var(--Background, #fffaed);
+        margin: 10px 0;
+        border-bottom: 1px solid black;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+
+        &:placeholder-shown {
+          color: var(--Gray-mid, #888);
+        }
+
+        &:focus {
+          border-bottom: 1px solid black !important;
+          border-top: none !important;
+          border-left: none !important;
+          border-right: none !important;
+        }
       }
 
-      &:focus {
-        border-bottom: 1px solid black !important;
-        border-top: none !important;
-        border-left: none !important;
-        border-right: none !important;
+      button {
+        margin-top: 20px;
       }
     }
 
-    button {
-      margin-top: 20px;
+    input:focus {
+      outline: none;
     }
-  }
-
-  input:focus {
-    outline: none;
   }
 }
