--- a/AbkarFE/src/components/OnBoard/Community/Community.module.css
+++ b/AbkarFE/src/components/OnBoard/Community/Community.module.css
@@ -135,7 +135,7 @@ height: 48px;
 background: rgba(31, 204, 123, 1);
 border: 2px solid rgba(0, 0, 0, 1);
 box-shadow: 0px 4px 0px 0px rgba(0, 0, 0, 1);
-font-family: "Omnes Arabic";
+font-family: "Omnes Arabic Semi Bold";
 font-size: 32px;
 font-weight: 600;
 line-height: 22px;
