--- a/AbkarFE/src/components/OnBoard/Course/Course.module.css
+++ b/AbkarFE/src/components/OnBoard/Course/Course.module.css
@@ -240,7 +240,7 @@ color: #fff;
     padding: 15px;
 }
 .progressPragraph{
-font-family: "Omnes Arabic";
+font-family: "Omnes Arabic Semi Bold";
 font-size: 28px;
 font-weight: 600;
 line-height: 26px;
@@ -252,8 +252,8 @@ color: rgba(255, 255, 255, 1);
 }
 
 .videoParagraph {
-    font-family: "Omnes Arabic";
-    font-size: 24px;
+    font-family: "Omnes Arabic Semi Bold";
+    font-size: 22px;
     font-weight: 600;
     line-height: 26px;
     letter-spacing: -0.40799999237060547px;
@@ -304,6 +304,16 @@ color: rgba(255, 255, 255, 1);
     background-color: rgba(0, 0, 0,0.5);
     border-radius: 50%;
 }
+.videoNumber{
+    font-family: "Omnes Arabic Semi Bold";
+font-size: 40px;
+font-weight: 600;
+line-height: 26px;
+letter-spacing: -0.40799999237060547px;
+text-align: right;
+margin-top: 20px;
+
+}
 
 .note {
     background: #FF5F84;
@@ -319,8 +329,8 @@ border-radius: 24px;
 
 
 .noteParagraph {
-    font-family: "Omnes Arabic";
-    font-size: 20px;
+    font-family: "Omnes Arabic Semi Bold";
+    font-size: 22px;
     font-weight: 600;
     line-height: 26px;
     letter-spacing: -0.40799999237060547px;
@@ -336,8 +346,8 @@ border-radius: 24px;
     cursor: pointer;
 }
 .iconParagraph{
- font-family: "Omnes Arabic";
-font-size: 50px;
+ font-family: "Omnes Arabic Semi Bold";
+font-size: 40px;
 font-weight: 600;
 line-height: 26px;
 letter-spacing: -0.40799999237060547px;
