--- a/AbkarFE/src/components/login-signup/style/_preloader.scss
+++ b/AbkarFE/src/components/login-signup/style/_preloader.scss
@@ -14,8 +14,39 @@
 }
 
 @font-face {
+  font-family: "Omnes Arabic Medium";
+  src: url("../../../assets/OMNES-ARABIC-MEDIUM.ttf") format("truetype");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "Omnes Arabic Semi Bold";
+  src: url("../../../assets/OMNES-ARABIC-SEMI-BOLD.ttf") format("truetype");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "Omnes Arabic Bold";
+  src: url("../../../assets/OMNES-ARABIC-BOLD.ttf") format("truetype");
+  font-weight: 700;
+}
+
+@font-face {
   font-family: "Omnes Arabic";
-  src: url("../../../assets/OMNES-ARABIC-REGULAR.ttf") format("truetype");
+  src: url("../../../assets/OMNES-ARABIC-MEDIUM.ttf") format("truetype");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "Omnes Arabic";
+  src: url("../../../assets/OMNES-ARABIC-SEMI-BOLD.ttf") format("truetype");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "Omnes Arabic";
+  src: url("../../../assets/OMNES-ARABIC-BOLD.ttf") format("truetype");
+  font-weight: 700;
 }
 
 @font-face {
