--- a/AbkarFE/src/components/login-signup/style/_wrapper.scss
+++ b/AbkarFE/src/components/login-signup/style/_wrapper.scss
@@ -12,9 +12,10 @@
   &__window {
     border: 4px solid #000000;
     background-color: var(--window-background);
-    width: 620px;
+    width: 580px;
     border-radius: 20px;
     animation: fade-in 1s ease-in-out;
+    height: 684px;
 
     @media (max-width: 680px) {
       width: 100%;
