--- a/AbkarFE/src/components/login-signup/style/main.css
+++ b/AbkarFE/src/components/login-signup/style/main.css
@@ -13,8 +13,34 @@
   src: url("../../../assets/AlaTypoo-Medium.ttf") format("truetype");
 }
 @font-face {
+  font-family: "Omnes Arabic Medium";
+  src: url("../../../assets/OMNES-ARABIC-MEDIUM.ttf") format("truetype");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Omnes Arabic Semi Bold";
+  src: url("../../../assets/OMNES-ARABIC-SEMI-BOLD.ttf") format("truetype");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Omnes Arabic Bold";
+  src: url("../../../assets/OMNES-ARABIC-BOLD.ttf") format("truetype");
+  font-weight: 700;
+}
+@font-face {
   font-family: "Omnes Arabic";
-  src: url("../../../assets/OMNES-ARABIC-REGULAR.ttf") format("truetype");
+  src: url("../../../assets/OMNES-ARABIC-MEDIUM.ttf") format("truetype");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Omnes Arabic";
+  src: url("../../../assets/OMNES-ARABIC-SEMI-BOLD.ttf") format("truetype");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Omnes Arabic";
+  src: url("../../../assets/OMNES-ARABIC-BOLD.ttf") format("truetype");
+  font-weight: 700;
 }
 @font-face {
   font-family: "AA-GALAXY";
@@ -168,9 +194,10 @@
 .Wrapper__window {
   border: 4px solid #000000;
   background-color: var(--window-background);
-  width: 620px;
+  width: 580px;
   border-radius: 20px;
   animation: fade-in 1s ease-in-out;
+  height: 684px;
 }
 @media (max-width: 680px) {
   .Wrapper__window {
@@ -191,11 +218,24 @@
 }
 .GreenBtn,
 .RedBtn {
-  width: 216px;
-  height: 60px;
+  width: 190px;
+  height: 48px;
   border-radius: 14px;
   border: 2px solid #000000;
   cursor: pointer;
+  color: #fff;
+  text-align: center;
+  font-family: "Omnes Arabic";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: -0.408px;
+  box-shadow: 0px 4px 0px 0px #000;
+}
+
+.Age .GreenBtn,
+.Age .RedBtn {
   color: #fff;
   text-align: center;
   font-family: "Omnes Arabic";
@@ -211,7 +251,7 @@
 }
 
 .RedBtn {
-  background-color: #f9295a;
+  background-color: #ff5f84;
 }
 
 .long {
@@ -230,7 +270,7 @@
   font-weight: 600;
   line-height: 22px;
   letter-spacing: -0.408px;
-  width: 490px;
+  width: 394px;
   height: 48px;
   flex-shrink: 0;
 }
@@ -309,8 +349,9 @@
   padding-top: 26px;
 }
 .LogIn .title {
+  margin-top: 14px;
   font-family: "AA-GALAXY";
-  font-size: 60px;
+  font-size: 56px;
   font-weight: 700;
   line-height: 22px;
   letter-spacing: -0.4079999924px;
@@ -334,17 +375,17 @@
 }
 .LogIn form div label {
   position: absolute;
-  right: 70px;
-  bottom: 14px;
+  right: 96px;
+  bottom: 16px;
   color: gray;
-  font-size: 18px;
+  font-size: 16px;
   transition: 0.5s;
 }
 .LogIn form div input {
-  width: 80%;
+  width: 68%;
   text-align: right;
   font-family: "Omnes Arabic";
-  font-size: 24px;
+  font-size: 22px;
   font-style: normal;
   font-weight: 500;
   line-height: 22px;
@@ -364,7 +405,7 @@
 }
 .LogIn .password .forget {
   text-align: left;
-  width: 80%;
+  width: 66%;
   margin-bottom: 10px;
 }
 .LogIn .password .forget button {
@@ -383,12 +424,12 @@
   text-align: center;
   -webkit-text-stroke-color: #000;
   font-family: "Omnes Arabic";
-  font-size: 24px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 600;
   line-height: 22px;
   letter-spacing: -0.408px;
-  margin-top: 14px;
+  margin-top: 22px;
   --s: 1.5px;
   text-shadow: 0 2px var(--s) #000, 0 2px var(--s) #000, 0 2px var(--s) #000, 0 2px var(--s) #000, 0 2px var(--s) #000, 0 2px var(--s) #000, 0 2px var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000, 0 0 var(--s) #000;
 }
@@ -408,12 +449,12 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-top: 22px;
+  margin-top: 34px;
   position: relative;
 }
 .LogIn .or .line {
   height: 1px;
-  width: 70%;
+  width: 67%;
   background-color: black;
 }
 .LogIn .or span {
@@ -424,13 +465,13 @@
   color: var(--Gray-mid, #888);
   text-align: center;
   font-family: "Omnes Arabic";
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 22px;
   letter-spacing: -0.408px;
   background-color: var(--window-background);
-  width: 184px;
+  width: 136px;
 }
 @media (max-width: 680px) {
   .LogIn .or span {
@@ -441,8 +482,8 @@
 .LogIn .btns {
   display: flex;
   justify-content: center;
-  margin-top: 16px;
-  gap: 10px;
+  margin-top: 28px;
+  gap: 16px;
 }
 @media (max-width: 680px) {
   .LogIn .btns button {
@@ -451,7 +492,7 @@
   }
 }
 .LogIn .btns img {
-  margin-right: 4px;
+  margin-right: 10px;
 }
 .LogIn input:focus {
   outline: none;
